--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -6,5 +6,9 @@ logging.file=C:/Users/kannaduki/Desktop/log.log
 logging.level.org.springframework.web = DEBUG
 spring.profiles.active=dev
 spring.http.encoding.charset=UTF-8
+#Favicon
+spring.mvc.favicon.enabled=false
+#src/main/resource/static/favicon.ico
+
 book.name=spring boot
 book.author=wyf
