--- a/SpringBoot/src/main/resources/application-prod.properties
+++ b/SpringBoot/src/main/resources/application-prod.properties
@@ -1,1 +1,6 @@
-server.port=80
+#SSL
+server.port=8443
+server.ssl.key-store=.keystore
+server.ssl.key-store-password=xsy123
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=tomcat
