SpringData REST and Transactional

--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.jpa.show-sql=true
 #让控制器输出json字符串格式更美观
 spring.jackson.serialization.indent-output=true
 
+# rest
+spring.data.rest.base-path=/api
+
 
 book.name=spring boot
 book.author=wyf
