--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/
 #配置日志的级别
 logging.file=C:/Users/kannaduki/Desktop/log.log
 #配置日志文件,格式为logging.level.包名=级别
-logging.level.org.springframework.web = DEBUG
+logging.level.org.springframework.web=DEBUG
 spring.profiles.active=dev
 spring.http.encoding.charset=UTF-8
 #Favicon
@@ -12,7 +12,7 @@ spring.mvc.favicon.enabled=false
 
 #DATABASE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/SpringBoot
+spring.datasource.url=jdbc:mysql://172.17.0.3:3306/SpringBoot
 spring.datasource.username=root
 spring.datasource.password=123456
 #create create-drop update validate none
@@ -24,6 +24,42 @@ spring.jackson.serialization.indent-output=true
 
 # rest
 spring.data.rest.base-path=/api
+
+# cache
+#spring.cache.type=
+#spring.cache.cache-names=程序启动时创建缓存名称
+#spring.cache.ehcache.config=ehcache配置文件地址
+#spring.cache.jcache.config=jcache配置文件地址
+
+#MongoDB
+#spring.data.mongodb.host=数据库主机地址,默认localhost
+#spring.data.mongodb.post=27107
+#spring.data.mongodb.uri= connection URL
+#spring.data.mongodb.username=
+#spring.data.mongodb.password=
+
+#redis
+#spring.redis.database= 数据库名称 默认为db0
+#spring.redis.host=  服务器地址,默认为localhost
+#spring.redis.password=  数据库密码
+#spring.redis.port=  连接端口默认为6379
+#连接池
+#spring.redis.jedis.pool.max-idle=
+#spring.redis.jedis.pool.min-idle=
+#spring.redis.jedis.pool.max-active=
+#spring.redis.jedis.pool.max-wait=
+#spring.redis.sentinel.master=
+#spring.redis.sentinel.nodes=
+#spring.redis.timeout=
+
+#springsecurity
+#spring.security.user.name=user 内存中的用户默认帐号为user
+#spring.security.user.password= 默认用户的密码
+#spring.security.user.roles=USER 默认用户的角色
+
+logging.level.org.springframework.security=INFO
+
+spring.thymeleaf.cache=false
 
 
 book.name=spring boot
