--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mvc.favicon.enabled=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.17.0.3:3306/SpringBoot
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 #create create-drop update validate none
 spring.jpa.hibernate.ddl-auto=update
 #hibernate操作的时候在控制台显示真实的sql语句
@@ -43,6 +43,7 @@ spring.data.rest.base-path=/api
 #spring.redis.host=  服务器地址,默认为localhost
 #spring.redis.password=  数据库密码
 #spring.redis.port=  连接端口默认为6379
+
 #连接池
 #spring.redis.jedis.pool.max-idle=
 #spring.redis.jedis.pool.min-idle=
@@ -60,6 +61,19 @@ spring.data.rest.base-path=/api
 logging.level.org.springframework.security=INFO
 
 spring.thymeleaf.cache=false
+
+#activemq
+#spring.activemq.broker-url=tcp://localhost:61616
+#spring.activemq.user=
+#spring.activemq.password=
+#spring.activemq.in-memory=true
+#spring.activemq.pooled=false
+
+#rabbitmq
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=secret
 
 
 book.name=spring boot
